arreglos en tamaño background

--- a/index.html
+++ b/index.html
@@ -6,22 +6,25 @@
 	<link rel="stylesheet" type="text/css" href="css/bootstrap.css">
 	<link rel="stylesheet" type="text/css" href="css/main.css">
 </head>
-<body>
-	<div class="container-fluid">
+<body class="backgroundimg">
+	<section class="slogo">
+		<div class="container-fluid">
+			<img src="img/logofucsia.png" class="logo">
+		</div>
+	</section>
+	<section class="sbotones">
 		<div class="row">
 			<div class="col-xs-12 col-sm-12 col-md-12">
-				<div class="backgroundimg">
-					<img src="img/logofucsia.png" class="logo">
-					<div class="btn-group">
-						<button type="button" class="btn btn-default btnizq"> Log in </button>
-						<button type="button" class="btn btn-default btnder"> Sign up </button>
-					</div>
+				<div class="btn-group botones">
+					<button type="button" class="btn btn-default btnizq"> Log in </button>
+					<button type="button" class="btn btn-default btnder"> Sign up </button>
 				</div>
 			</div>
 		</div>
-	</div>
-		<script type="text/javascript" src="js/main.js"></script>
-		<script type="text/javascript" src="jquery-3.1.1.js"></script>
+	</section>
+
+<script type="text/javascript" src="js/main.js"></script>
+<script type="text/javascript" src="jquery-3.1.1.js"></script>
 </body>
 </html>
 
