arreglos con materialize.css

--- a/index.html
+++ b/index.html
@@ -3,8 +3,11 @@
 <head>
 	<meta charset="UTF-8">
 	<title> Lyft </title>
-	<link rel="stylesheet" type="text/css" href="css/bootstrap.css">
+	<!-- materialize.css -->
+	 <link type="text/css" rel="stylesheet" href="css/materialize.min.css"  media="screen,projection"/>
 	<link rel="stylesheet" type="text/css" href="css/main.css">
+	<!--permite que el sitio esté optimizado para móviles-->
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 </head>
 <body class="backgroundimg">
 	<section class="slogo">
@@ -22,9 +25,10 @@
 			</div>
 		</div>
 	</section>
-
+   <!--Import jQuery before materialize.js-->
+<script type="text/javascript" src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
+<script type="text/javascript" src="js/materialize.min.js"></script>
 <script type="text/javascript" src="js/main.js"></script>
-<script type="text/javascript" src="jquery-3.1.1.js"></script>
 </body>
 </html>
 
