arreglo en materialize

--- a/index.html
+++ b/index.html
@@ -3,32 +3,39 @@
 <head>
 	<meta charset="UTF-8">
 	<title> Lyft </title>
+	<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 	<!-- materialize.css -->
-	 <link type="text/css" rel="stylesheet" href="css/materialize.min.css"  media="screen,projection"/>
+	<link type="text/css" rel="stylesheet" href="css/materialize.min.css"  media="screen,projection"/>
 	<link rel="stylesheet" type="text/css" href="css/main.css">
 	<!--permite que el sitio esté optimizado para móviles-->
-    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+
 </head>
 <body class="backgroundimg">
 	<section class="slogo">
-		<div class="container-fluid">
-			<img src="img/logofucsia.png" class="logo">
+		<div class="container">
+			<div class="row">
+				<div class="col s12">
+					<img src="img/logofucsia.png" class="logo">
+				</div>
+			</div>
 		</div>
 	</section>
 	<section class="sbotones">
-		<div class="row">
-			<div class="col-xs-12 col-sm-12 col-md-12">
+		<div class="container">
+			<div class="row">
+			<div class="col s12">
 				<div class="btn-group botones">
 					<button type="button" class="btn btn-default btnizq"> Log in </button>
 					<button type="button" class="btn btn-default btnder"> Sign up </button>
 				</div>
 			</div>
 		</div>
+		</div>	
 	</section>
-   <!--Import jQuery before materialize.js-->
-<script type="text/javascript" src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
-<script type="text/javascript" src="js/materialize.min.js"></script>
-<script type="text/javascript" src="js/main.js"></script>
+	<!--Import jQuery before materialize.js-->
+	<script type="text/javascript" src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
+	<script type="text/javascript" src="js/materialize.min.js"></script>
+	<script type="text/javascript" src="js/main.js"></script>
 </body>
 </html>
 
@@ -39,4 +46,3 @@
 
 
 
-			
