cambios en enlace index, comienzo sign up

--- a/signup.html
+++ b/signup.html
@@ -5,4 +5,16 @@
 	<title> Sign Up </title>
 	<link rel="stylesheet" type="text/css" href="css/materialize.css">
 	<link rel="stylesheet" type="text/css" href="css/main.css">
+	<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
+<body>
+	<header>
+		 <i class="large material-icons">insert_chart</i>
+		<h3 class="center-align">
+			Sign Up
+		</h3>
+		<p class="center-align">
+			Unirse ahora para obtener crédito gratis
+		</p>
+	</header>
+</body>
