--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<title> Lyft </title>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 	<!-- materialize.css -->
-	<link type="text/css" rel="stylesheet" href="css/materialize.min.css"  media="screen,projection"/>
+	<link type="text/css" rel="stylesheet" href="css/materialize.css"  media="screen,projection"/>
 	<link rel="stylesheet" type="text/css" href="css/main.css">
 	<!--permite que el sitio esté optimizado para móviles-->
 
@@ -23,26 +23,17 @@
 	<section class="sbotones">
 		<div class="container">
 			<div class="row">
-			<div class="col s12">
-				<div class="btn-group botones">
-					<button type="button" class="btn btn-default btnizq"> Log in </button>
-					<button type="button" class="btn btn-default btnder"> Sign up </button>
+				<div class="col s12">
+					<a class="waves-effect waves-light btn-large btnizq transparent"> Log in</a>
+					<a class="waves-effect waves-light btn-large btnder pink lighten-1" href="signup.html"> Sign up </a>
 				</div>
 			</div>
 		</div>
-		</div>	
-	</section>
-	<!--Import jQuery before materialize.js-->
-	<script type="text/javascript" src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
-	<script type="text/javascript" src="js/materialize.min.js"></script>
-	<script type="text/javascript" src="js/main.js"></script>
+	</div>	
+</section>
+<!--Import jQuery before materialize.js-->
+<script type="text/javascript" src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
+<script type="text/javascript" src="js/materialize.min.js"></script>
+<script type="text/javascript" src="js/main.js"></script>
 </body>
 </html>
-
-
-
-
-
-
-
-
