--- a/signup.html
+++ b/signup.html
@@ -9,12 +9,17 @@
 </head>
 <body>
 	<header>
-		 <i class="large material-icons">insert_chart</i>
-		<h3 class="center-align">
-			Sign Up
-		</h3>
-		<p class="center-align">
-			Unirse ahora para obtener crédito gratis
-		</p>
+		<div class="container">
+			<div class="row">
+				<div class="col s1">
+					<a href="index.html"> <i class="material-icons medium iconleft">keyboard_arrow_left</i> </a>
+				</div>
+				<div class="col s11">
+					<h2 class="center-align"> Sign Up </h2>
+				</div>
+			</div>
+			<h5 class="center-align"> Unirse ahora para obtener crédito gratis </h5>
+			<hr>
+		</div>
 	</header>
 </body>
