se agregan html de signup_user y paises

--- a/ countries.html
+++ b/ countries.html
@@ -9,27 +9,14 @@
 	<link rel="stylesheet" type="text/css" href="css/main.css">
 </head>
 
-<body class="backgroundimg">
-	<section class="slogo">
-		<div class="container">
-			<div class="row">
-				<div class="col s12">
-					<img src="img/logofucsia.png" class="logo">
-				</div>
-			</div>
-		</div>
-	</section>
-	<section class="sbotones">
-		<div class="container">
-			<div class="row">
-				<div class="col s12">
-					<a class="waves-effect waves-light btn-large btnizq transparent"> Log in</a>
-					<a class="waves-effect waves-light btn-large btnder pink lighten-1" href="signup.html"> Sign up </a>
-				</div>
-			</div>
-		</div>
-	</div>	
-</section>
+<body>
+	
+
+
+
+
+
+
 <!--Import jQuery before materialize.js-->
 <script type="text/javascript" src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
 <script type="text/javascript" src="js/materialize.js"></script>
