--- a/signup.html
+++ b/signup.html
@@ -21,19 +21,23 @@
 		</div>
 	</header>
 	<section>
-	<!-- input select country -->
-  	<a class='dropdown-button btn purple darken-3 secpais' href='#' data-activates='dropdown1'> Selecciona tu país </a>
-  	<!-- Dropdown Structure -->
-  	<ul id='dropdown1' class='dropdown-content'>
-    	<li class=""><img src="img/chile.png" class="bandera"><a href="#!">Chile</a></li>
-    	<li class=""><img src="img/peru.png" class="bandera"><a href="#!">Perú</a></li>
-    	<li class=""><img src="img/mexico.png" class="bandera"><a href="#!">México</a></li>
-  	</ul>
-  	<!-- input select telephone --> 
+			
+			<div class="container">
+			<div class="row">
+				<div class="col s7">
+					
+					<!-- input select telephone --> 
+					<input type="Codigo de area" name="código área" class="numtelefono">
+				</div>
+			</div> 
+		      
+			<br>
+			<h5 class="center-align"> Enviaremos un mensaje de texto para verificar su teléfono </h5>
 
-	</section>
+
+		</section>
 	<footer class="footernext">
-		<a class="waves-effect waves-light btn pink lighten-1 btnnext"> Next </a>
+		<a class="waves-effect waves-light btn pink lighten-1 btnnext" href="signup_user.html"> Next </a>
 	</footer>
 
 	<script type="text/javascript" src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
