--- a/signup_user.html
+++ b/signup_user.html
@@ -8,28 +8,24 @@
 	<link type="text/css" rel="stylesheet" href="css/materialize.css"  media="screen,projection"/>
 	<link rel="stylesheet" type="text/css" href="css/main.css">
 </head>
+<body>
+<header>
+		<div class="container">
+			<div class="row">
+				<div class="col s12">
+					<a href="signup.html" class="mg-rg"> <i class="material-icons medium">keyboard_arrow_left</i> </a>
+					<h2 class="center-align di"> Sign Up </h2>
+				</div>
+			</div>
+			<h5 class="center-align"> Unirse ahora para obtener crédito gratis </h5>
+			<hr>
+		</div>
+	</header>
 
-<body class="backgroundimg">
-	<section class="slogo">
-		<div class="container">
-			<div class="row">
-				<div class="col s12">
-					<img src="img/logofucsia.png" class="logo">
-				</div>
-			</div>
-		</div>
-	</section>
-	<section class="sbotones">
-		<div class="container">
-			<div class="row">
-				<div class="col s12">
-					<a class="waves-effect waves-light btn-large btnizq transparent"> Log in</a>
-					<a class="waves-effect waves-light btn-large btnder pink lighten-1" href="signup.html"> Sign up </a>
-				</div>
-			</div>
-		</div>
-	</div>	
-</section>
+
+
+
+
 <!--Import jQuery before materialize.js-->
 <script type="text/javascript" src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
 <script type="text/javascript" src="js/materialize.js"></script>
