--- a/signup_user.html
+++ b/signup_user.html
@@ -2,22 +2,23 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title> Lyft </title>
+	<title> Sign Up user </title>
+	<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 	<!-- materialize.css -->
 	<link type="text/css" rel="stylesheet" href="css/materialize.css"  media="screen,projection"/>
 	<link rel="stylesheet" type="text/css" href="css/main.css">
 </head>
 <body>
-<header>
+	<header>
 		<div class="container">
 			<div class="row">
 				<div class="col s12">
-					<a href="signup.html" class="mg-rg"> <i class="material-icons medium">keyboard_arrow_left</i> </a>
-					<h2 class="center-align di"> Sign Up </h2>
+					<a href="signup.html"> <i class="material-icons small">keyboard_arrow_left </i></a>
+					<h3 class="center-align di"> Sign Up </h3>
 				</div>
 			</div>
-			<h5 class="center-align"> Unirse ahora para obtener crédito gratis </h5>
+			<p class="center-align"> Unirse ahora para obtener crédito gratis </p>
 			<hr>
 		</div>
 	</header>
@@ -27,7 +28,7 @@
 
 
 <!--Import jQuery before materialize.js-->
-<script type="text/javascript" src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
+<script type="text/javascript" src="https://code.jquery.com/jquery-3.1.1.js"></script>
 <script type="text/javascript" src="js/materialize.js"></script>
 <script type="text/javascript" src="js/main.js"></script>
 </body>
