agregar input name y email, en signup-user.html

--- a/signup.html
+++ b/signup.html
@@ -30,7 +30,7 @@
 
 					<!-- input select telephone --> 
 					<div class="col s8">
-						<input type="telp" name="telefono" placeholder="+569 xxxxxxxx">
+						<input type="telp" name="telefono" placeholder="xxxxxxxxx">
 					</div>
 				</div>
 				<br>
