--- a/signup_user.html
+++ b/signup_user.html
@@ -22,11 +22,25 @@
 			<hr>
 		</div>
 	</header>
-
-
-
-
-
+	<section>
+		<div class="container">
+			<!-- input Name -->
+			<div class="row">
+				<form class=" input-field col s12">
+					<input id="first_name" type="text" class="validate">
+					<label for="first_name">Nombre y apellido</label>
+				</div>
+			</form>
+			</div>
+			<!-- input email -->
+			<div class="row">
+				<div class="input-field col s12">
+					<input id="email" type="email" class="validate">
+					<label for="email">Email</label>
+				</div>
+			</div>
+		</div>
+	</section>
 <!--Import jQuery before materialize.js-->
 <script type="text/javascript" src="https://code.jquery.com/jquery-3.1.1.js"></script>
 <script type="text/javascript" src="js/materialize.js"></script>
