--- a/ countries.html
+++ b/ countries.html
@@ -9,15 +9,13 @@
 	<link type="text/css" rel="stylesheet" href="css/materialize.css"  media="screen,projection"/>
 	<link rel="stylesheet" type="text/css" href="css/main.css">
 </head>
-
 <body>
-	
+<header>
+	<h3 class="center-aling"> Selecciones su País </h3>
+</header>
 
 
-
-
-
-
+</body>
 <!--Import jQuery before materialize.js-->
 <script type="text/javascript" src="https://code.jquery.com/jquery-3.1.1.js"></script>
 <script type="text/javascript" src="js/materialize.js"></script>
