se agrega listado paises

--- a/signup.html
+++ b/signup.html
@@ -7,7 +7,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 	<!-- materialize.css -->
 	<link type="text/css" rel="stylesheet" href="css/materialize.css"  media="screen,projection"/>
-	<link rel="stylesheet" type="text/css" href="css/main.css">
+	<link rel="stylesheet" type="text/css" href="css/signup.css">
 </head>
 <body>
 	<header>
@@ -15,7 +15,7 @@
 			<div class="row">
 				<div class="col s12">
 					<a href="index.html"> <i class="material-icons small">keyboard_arrow_left</i> </a>
-					<h3 class="center-align di"> Sign Up </h3>
+					<h3 class="center-align"> Sign Up </h3>
 				</div>
 			</div>
 			<p class="center-align"> Unirse ahora para obtener crédito gratis </p>
@@ -26,25 +26,31 @@
 		<div class="container">
 			<div class="row">
 				<div class="col s4">
-					<!-- input select conuntries --> 
-
-					<!-- input select telephone --> 
-					<div class="col s8">
-						<input type="telp" name="telefono" placeholder="xxxxxxxxx">
-					</div>
+					<!-- button select conuntries --> 
+					<a class="waves-effect waves-light btn blue lighten-1" href="countries.html">País</a>
 				</div>
-				<br>
-			<p class="center-align"> Enviaremos un mensaje de texto para verificar su teléfono </p>
+				<!-- input area code --> 
+				<div class="col s3">
+					<input type="code" name="+569">
+				</div>
+				<!-- input select telephone --> 
+				<div class="col s5">
+					<input type="telp" name="telefono" placeholder="xxxxxxxxx">
+				</div>
 			</div>
-
-			
+			<br>
+			<div class="row">
+				<div class="col s12">
+					<p class="center-align"> Enviaremos un mensaje de texto para verificar su teléfono </p>
+				</div>
+			</div>
 		</section>	
-			<footer class="sectnext">
-				<div class="row">
+		<footer class="sectnext">
+			<div class="row">
 				<a class="waves-effect waves-light btn-large pink lighten-1 btnnext col s12" href="signup_user.html"> Next </a>
 			</footer>
-		<!--Import jQuery before materialize.js-->	
-	<script type="text/javascript" src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
-	<script type="text/javascript" src="js/materialize.js"></script>
-	<script type="text/javascript" src="js/main.js"></script>
-</body>
+			<!--Import jQuery before materialize.js-->	
+			<script type="text/javascript" src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
+			<script type="text/javascript" src="js/materialize.js"></script>
+			<script type="text/javascript" src="js/main.js"></script>
+		</body>
