--- a/signup_user.html
+++ b/signup_user.html
@@ -7,7 +7,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 	<!-- materialize.css -->
 	<link type="text/css" rel="stylesheet" href="css/materialize.css"  media="screen,projection"/>
-	<link rel="stylesheet" type="text/css" href="css/main.css">
+	<link rel="stylesheet" type="text/css" href="css/signup_user.css">
 </head>
 <body>
 	<header>
@@ -15,7 +15,7 @@
 			<div class="row">
 				<div class="col s12">
 					<a href="signup.html"> <i class="material-icons small">keyboard_arrow_left </i></a>
-					<h3 class="center-align di"> Sign Up </h3>
+					<h3 class="center-align"> Sign Up </h3>
 				</div>
 			</div>
 			<p class="center-align"> Unirse ahora para obtener crédito gratis </p>
@@ -26,21 +26,27 @@
 		<div class="container">
 			<!-- input Name -->
 			<div class="row">
-				<form class=" input-field col s12">
+				<div class="col s1">
+					<i class="material-icons">account_circle</i>
+				</div>
+				<form class=" input-field col s11">
 					<input id="first_name" type="text" class="validate">
 					<label for="first_name">Nombre y apellido</label>
 				</div>
 			</form>
+		</div>
+		<!-- input email -->
+		<div class="row">
+			<div class="col s1">
+				<i class="material-icons">email</i>
 			</div>
-			<!-- input email -->
-			<div class="row">
-				<div class="input-field col s12">
-					<input id="email" type="email" class="validate">
-					<label for="email">Email</label>
-				</div>
+			<div class="input-field col s11">
+				<input id="email" type="email" class="validate">
+				<label for="email">Email</label>
 			</div>
 		</div>
-	</section>
+	</div>
+</section>
 <!--Import jQuery before materialize.js-->
 <script type="text/javascript" src="https://code.jquery.com/jquery-3.1.1.js"></script>
 <script type="text/javascript" src="js/materialize.js"></script>
