se agregan todas las banderas

--- a/countries.html
+++ b/countries.html
@@ -22,7 +22,7 @@
 	<div class="row">
 		<div class="col s12">
 		<div class="collection">
-	<a href="signup.html" class="collection-item paise"><span class="badge"><img src="img/argentina.png" class="banderas"> </span>Argentina</a>
+	<a href="signup.html" class="collection-item paises"><span class="badge"><img src="img/argentina.png" class="banderas"> </span>Argentina</a>
 	<a href="signup.html" class="collection-item paises"><span class="badge"><img src="img/brasil.png" class="banderas"></span>Brasil</a>
 	<a href="signup.html" class="collection-item paises"><span class="badge"><img src="img/bolivia.png" class="banderas"></span>Bolivia</a>
     <a href="signup.html" class="collection-item paises"><span class="badge"><img src="img/Chile.png" class="banderas"></span>Chile</a>
