--- a/signup_user.html
+++ b/signup_user.html
@@ -47,6 +47,19 @@
 		</div>
 	</div>
 </section>
+<section>
+	<div class="container terminos">
+		<div class="row">
+			<form class="col s12">
+				<div class="input-field">
+					<p><input type="checkbox" class="filled-in" id="filled-in-box" checked="checked">
+						<label for="filled-in-box">I agree to Lyft's</label></p>
+						<p><a href="#!" class="termof">Term of Service</a></p>    
+					</div>
+				</form>
+			</div>
+		</div>
+	</section>
 <!--Import jQuery before materialize.js-->
 <script type="text/javascript" src="https://code.jquery.com/jquery-3.1.1.js"></script>
 <script type="text/javascript" src="js/materialize.js"></script>
