--- a/countries.html
+++ b/countries.html
@@ -19,22 +19,21 @@
 	<hr>
 </header>
 <section>
+<!-- country listing -->
 	<div class="row">
 		<div class="col s12">
-		<div class="collection">
-	<a href="signup.html" class="collection-item paises"><span class="badge"><img src="img/argentina.png" class="banderas"> </span>Argentina</a>
-	<a href="signup.html" class="collection-item paises"><span class="badge"><img src="img/brasil.png" class="banderas"></span>Brasil</a>
-	<a href="signup.html" class="collection-item paises"><span class="badge"><img src="img/bolivia.png" class="banderas"></span>Bolivia</a>
-    <a href="signup.html" class="collection-item paises"><span class="badge"><img src="img/Chile.png" class="banderas"></span>Chile</a>
-    <a href="signup.html" class="collection-item paises"><span class="badge"><img src="img/peru.png" class="banderas"></span>Perú</a>
-    <a href="signup.html" class="collection-item paises"><span class="badge"><img src="img/usa.png" class="banderas"></span>USA</a> 
-    <a href="signup.html" class="collection-item paises"><span class="badge"><img src="img/mexico.png" class="banderas"></span>México</a>
-  </div>	
+			<div class="collection">
+				<a href="signup.html" class="collection-item paises"><span class="badge"><img src="img/argentina.png" class="banderas"> </span>Argentina</a>
+				<a href="signup.html" class="collection-item paises"><span class="badge"><img src="img/brasil.png" class="banderas"></span>Brasil</a>
+				<a href="signup.html" class="collection-item paises"><span class="badge"><img src="img/bolivia.png" class="banderas"></span>Bolivia</a>
+				<a href="signup.html" class="collection-item paises"><span class="badge"><img src="img/chile.png" class="banderas"></span>Chile</a>
+				<a href="signup.html" class="collection-item paises"><span class="badge"><img src="img/peru.png" class="banderas"></span>Perú</a>
+				<a href="signup.html" class="collection-item paises"><span class="badge"><img src="img/usa.png" class="banderas"></span>USA</a> 
+				<a href="signup.html" class="collection-item paises"><span class="badge"><img src="img/mexico.png" class="banderas"></span>México</a>
+			</div>	
 		</div>
 	</div>
 </section>
-
-
 </body>
 <!--Import jQuery before materialize.js-->
 <script type="text/javascript" src="https://code.jquery.com/jquery-3.1.1.js"></script>
