--- a/signup.html
+++ b/signup.html
@@ -19,7 +19,7 @@
 				</div>
 			</div>
 			<p class="center-align"> Unirse ahora para obtener crédito gratis </p>
-			<hr>
+			<hr>	
 		</div>
 	</header>
 	<section>
@@ -29,13 +29,9 @@
 					<!-- button select conuntries --> 
 					<a class="waves-effect waves-light btn blue lighten-1" href="countries.html">País</a>
 				</div>
-				<!-- input area code --> 
-				<div class="col s1">
-					<input type="code" name="+569">
-				</div>
 				<!-- input select telephone --> 
-				<div class="col s6">
-					<input type="telp" name="telefono" placeholder="xxxxxxxxx">
+				<div class="col s6 telefono">
+					<input type="tel" name="telefono" placeholder="xxxxxxxxx">
 				</div>
 			</div>
 			<br>
@@ -53,4 +49,5 @@
 			<script type="text/javascript" src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
 			<script type="text/javascript" src="js/materialize.js"></script>
 			<script type="text/javascript" src="js/main.js"></script>
-		</body>
+		</body> 	
+		</html>
