--- a/signup_user.html
+++ b/signup_user.html
@@ -48,11 +48,12 @@
 	</div>
 </section>
 <section>
+	<!-- input term of service -->
 	<div class="container terminos">
 		<div class="row">
 			<form class="col s12">
 				<div class="input-field">
-					<p><input type="checkbox" class="filled-in" id="filled-in-box" checked="checked">
+					<p><input type="checkbox" class="filled-in chekbox" id="filled-in-box" checked="checked">
 						<label for="filled-in-box">I agree to Lyft's</label></p>
 						<p><a href="#!" class="termof">Term of Service</a></p>    
 					</div>
@@ -63,6 +64,6 @@
 <!--Import jQuery before materialize.js-->
 <script type="text/javascript" src="https://code.jquery.com/jquery-3.1.1.js"></script>
 <script type="text/javascript" src="js/materialize.js"></script>
-<script type="text/javascript" src="js/main.js"></script>
+<script type="text/javascript" src="js/signup_user.js"></script>
 </body>
 </html>
