--- a/maps.html
+++ b/maps.html
@@ -14,10 +14,66 @@
 </head>
 <body>
 <div class="contenedor">
-	<iframe src="https://www.google.com/maps/embed?pb=!1m10!1m8!1m3!1d6660.304190740551!2d-70.64208078675533!3d-33.41927884486453!3m2!1i1024!2i768!4f13.1!5e0!3m2!1ses!2scl!4v1480508236350" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
-</div>
+	<!--Se determina y escribe la localizacion-->
+             <div id='ubicacion'></div>
+             <script type="text/javascript">
+                 if (navigator.geolocation) {
+                       navigator.geolocation.getCurrentPosition(mostrarUbicacion);
+                 } else {alert("¡Error! Este navegador no soporta la Geolocalización.");}
+                 function mostrarUbicacion(position) {
+                   var times = position.timestamp;
+                 var latitud = position.coords.latitude;
+                 var longitud = position.coords.longitude;
+                   var altitud = position.coords.altitude; 
+                 var exactitud = position.coords.accuracy; 
+                 var div = document.getElementById("ubicacion");
+                 function refrescarUbicacion() { 
+                 navigator.geolocation.watchPosition(mostrarUbicacion);} 
+             </script>
 
-
+             <!--Se escribe un mapa con la localizacion anterior-->
+             <div id="demo"></div>
+             <div id="mapholder"></div>
+             <script src="http://maps.google.com/maps/api/js?sensor=false"></script>
+             <script type="text/javascript">
+                 var x=document.getElementById("demo");
+                 function cargarmap(){
+                 navigator.geolocation.getCurrentPosition(showPosition,showError);
+                 function showPosition(position){
+                     lat=position.coords.latitude;
+                     lon=position.coords.longitude;
+                     latlon=new google.maps.LatLng(lat, lon)
+                     mapholder=document.getElementById('mapholder')
+                     mapholder.style.height='100vh';
+                     mapholder.style.width='500wh';
+                     var myOptions={
+                     center:latlon,zoom:15,
+                     mapTypeId:google.maps.MapTypeId.ROADMAP,
+                     mapTypeControl:false,
+                     navigationControlOptions:{style:google.maps.NavigationControlStyle.SMALL}
+                     };
+                     var map=new google.maps.Map(document.getElementById("mapholder"),myOptions);
+                     var marker=new google.maps.Marker({position:latlon,map:map,title:"You are here!"});
+                 }
+                 function showError(error){
+                     switch(error.code){
+                           case error.PERMISSION_DENIED:
+                         x.innerHTML="Denegada la peticion de Geolocalización en el navegador."
+                         break;
+                           case error.POSITION_UNAVAILABLE:
+                         x.innerHTML="La información de la localización no esta disponible."
+                         break;
+                           case error.TIMEOUT:
+                         x.innerHTML="El tiempo de petición ha expirado."
+                         break;
+                           case error.UNKNOWN_ERROR:
+                         x.innerHTML="Ha ocurrido un error desconocido."
+                         break;
+                       }
+                 }}
+                 cargarmap();
+             </script>
+			
 	
 <!--Import jQuery before materialize.js-->
 <script type="text/javascript" src="https://code.jquery.com/jquery-3.1.1.js"></script>
