--- a/signup_user.html
+++ b/signup_user.html
@@ -61,6 +61,10 @@
 			</div>
 		</div>
 	</section>
+	<footer class="sectnext">
+			<div class="row">
+				<a class="waves-effect waves-light btn-large pink lighten-1 btnnext col s12" href="maps.html"> Next </a>
+			</footer>
 <!--Import jQuery before materialize.js-->
 <script type="text/javascript" src="https://code.jquery.com/jquery-3.1.1.js"></script>
 <script type="text/javascript" src="js/materialize.js"></script>
